# kcv

./: .gitignore  README.md  build.gradle  settings.gradle
src/: CMakeLists.txt
src/kcv/: CMakeLists.txt  kcvFilter.cpp  kcvImage.cpp  kcvTransformer.cpp
src/kcv/cpp/: kcvFilter.cpp  kcvImage.cpp  kcvTransformer.cpp  kcv_c.cpp
src/kcv/headers/: kcv.hpp  kcvBase.hpp  kcvFilter.hpp  kcvImage.hpp  kcvTransformer.hpp  kcv_c.h  kcv_c_filter.h
src/kcv/include/: kcvTransformer.hpp
src/main/cpp/: ImageWindow.hpp  main.cpp  utils.cpp
src/test/: CMakeLists.txt
src/utils/: CMakeLists.txt  utils.hpp
